Prevent graph resize when scrollbar toggles

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll
+}
+
 html,
 body {
   padding: 0;
@@ -9,7 +13,6 @@ body {
   font-size: 16px;
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  width: 100vw;
 }
 
 a {
